added journal name

--- a/pymfinder_manual.tex
+++ b/pymfinder_manual.tex
@@ -59,7 +59,7 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 
 		\subsubsection{Download}
 
-			The \emph{pymfinder} package can be downloaded from Github (url here) or [[journal?]].
+			The \emph{pymfinder} package can be downloaded from Github (url here) or PLOS Computational Biology.
 
 		\subsubsection{Installation}
 
