--- a/documentation/pymfinder_manual.tex
+++ b/documentation/pymfinder_manual.tex
@@ -83,14 +83,12 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 \setlength{\parindent}{0cm}
 \setlength{\parskip}{1em}
 
-
-
 \section{General information}
 	\textbf{Description:} \textit{pymfinder} is a Python package designed to detect motifs in complex networks and define the roles of nodes and links using these motifs. Both weighted and binary networks can be analyzed. At its core, \emph{pymfinder} is a combination of Python methods for network-motif analysis as well as a Python wrapper for the original \emph{mfinder} version 1.2 written in C and available at \url{http://www.weizmann.ac.il/mcb/UriAlon/}. This code has been included and modified here with the explicit consent of Nadav Kashtan, the author of mfinder 1.2.\\
 	\textbf{Copyrights:} TBD\\
 	\textbf{Version info:} TBD\\
 	\textbf{Availability:} TBD\\
-	\textbf{Platforms:} Windows, Linux, Mac OSX. Following recommendations for mfinder, large and dense networks (\textgreater10 000 nodes) require a computer with at least 512 Mbyte RAM in order to calculate motif frequencies. Calculating node or link roles will require greater resources.
+	\textbf{Platforms:} Windows, Linux, Mac OSX. Following recommendations for mfinder, large and dense networks (\textgreater10 000 nodes) require a computer with at least 512 Mbyte RAM in order to calculate motif frequencies. Calculating node or link roles will require greater resources. The analysis of motifs bigger then 8 nodes is not recommended.
 
 \section{How to use \emph{pymfinder}}
 	\subsection{Download and installation}
@@ -169,16 +167,17 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 				\item \textbf{randomize}: Determines whether to conduct the randomization analysis. If false, no randomizations will be conducted regardless of the value given to \textbf{nrandomizations}. Defaults to \textbf{randomize=False}.
 				\item \textbf{usemetropolis}: If randomizations are to be performed, determines whether to use the Metropolis algorithm. If Metropolis is not used, \emph{pymfinder} uses an MCMC algorithm to shuffle the original network while preserving in- and out-degrees of nodes. Defaults to \textbf{usemetropolis=False} (MCMC-based randomizations).
 				\item \textbf{networktype}: Indicates whether the network is unipartite (all species may interact with all other species) or bipartite (species are divided into two groups and may interact between groups but not within a group). Defaults to \textbf{networktype=``unipartite''}.
+				\item \textbf{weighted}: If true, the motif analysis will account for the weight of the interactions. Defaults to \textbf{weighted=False}.
 			\end{itemize}
 
 		\subsubsection{Functions}
 			The \emph{pymfinder} function call references three subordinate functions: \emph{motif\_structure}, \emph{motif\_participation}, and \emph{motif\_roles}. Each subordinate function may also be called independently if the full output from \emph{pymfinder} is not required. When \emph{pymfinder} is called, the subordinate functions are run in order (\emph{motif\_structure} then \emph{motif\_participation} then \emph{motif\_roles}). If a subordinate function is called directly, any preceding function will also be called. That is, calling \emph{motif\_structure} returns only the motif structure output but calling \emph{motif\_participation} returns the motif participation and motif structure output. Note that the three functions differ in the way in which they handle interaction weights.
 
-			\emph{motif\_structure} calculates the motif profile of the network. Arguments passable to \emph{motif\_structure} are the same as those for \emph{pymfinder}, except that the \textbf{links} argument is not relevant. The same motif profile will be returned whether or not \textbf{links=True}. [[how are weights handled?]]
+			\emph{motif\_structure} calculates the motif profile of the network. Arguments passable to \emph{motif\_structure} are the same as those for \emph{pymfinder}, except that the \textbf{links} argument is not relevant. The same motif profile will be returned whether or not \textbf{links=True}. If \textbf{weighted=True}, the weight of all interactions forming each motif will also be considered (see the description in the article presenting the software).
 
-			\emph{motif\_participation} calculates the motif participation for each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_participation} are the same as those passed to \emph{pymfinder}.[[how are weights handled?]]
+			\emph{motif\_participation} calculates the motif participation for each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_participation} are the same as those passed to \emph{pymfinder}. If \textbf{weighted=True}, the weight of all interactions forming each motif will also be considered (see the description in the article presenting the software).
 
-			\emph{motif\_roles} calculates the role of each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_roles} are the same as those passed to \emph{pymfinder}.[[how are weights handled?]]
+			\emph{motif\_roles} calculates the role of each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_roles} are the same as those passed to \emph{pymfinder}. If \textbf{weighted=True}, the weight of all interactions forming each motif will also be considered (see the description in the article presenting the software).
 
 		\subsubsection{Output}
 			The object `results' returned by \emph{pymfinder} is a NetworkStats object containing dictionaries of motifs, nodes, and links as well as the network type (unipartite or bipartite) and the size of motifs used. The value for each motif in the .motifs dictionary is an Motif object containing the motif profile for that motif. Similarly, the value for each node or link in the .nodes or .links dictionaries is a NodeLink object containing the motif participation or role of that node or link.
