Updated version of pymfinder

--- a/documentation/pymfinder_manual.tex
+++ b/documentation/pymfinder_manual.tex
@@ -88,7 +88,7 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 \section{General information}
 	\textbf{Description:} \textit{pymfinder} is a Python package designed to detect motifs in complex networks and define the roles of nodes and links using these motifs. Both weighted and binary networks can be analyzed. At its core, \emph{pymfinder} is a combination of Python methods for network-motif analysis as well as a Python wrapper for the original \emph{mfinder} version 1.2 written in C and available at \url{http://www.weizmann.ac.il/mcb/UriAlon/}. This code has been included and modified here with the explicit consent of Nadav Kashtan, the author of mfinder 1.2.\\
 	\textbf{License:} MIT License (2018)\\
-	\textbf{Version info:} pymfinder0.23\\
+	\textbf{Version info:} v1.0\\
 	\textbf{Availability:} \url{https://github.com/stoufferlab/pymfinder}\\
 	\textbf{Platforms:} Windows, Linux, Mac OSX. \textit{pymfinder} will require you to have the Python modules Numpy and Setuptools installed in your machine. Following recommendations for mfinder, large and dense networks (\textgreater10 000 nodes) require a computer with at least 512 Mbyte RAM in order to calculate motif frequencies. Calculating node or link roles will require greater resources. The analysis of motifs bigger then 8 nodes is not recommended.
 
