--- a/documentation/biblist.bib
+++ b/documentation/biblist.bib
@@ -1,21 +1,44 @@
-@article{Stouffer2007,
-author = {Stouffer, Daniel B and Camacho, Juan and Jiang, Wenxin and Amaral, Lu\'{\i}s A. Nunes},
-doi = {10.1098/rspb.2007.0571},
-file = {:home/arc136/Desktop/Papers/Stouffer et al. - 2007 - Proceedings of the Royal Society of London B.pdf:pdf},
-journal = {Proceedings of the Royal Society B: Biological Sciences},
-keywords = {Animals,Biological,Ecosystem,Food Chain,Models,Predatory Behavior},
-month = aug,
-number = {1621},
-pages = {1931--1940},
-pmid = {17567558},
-title = {{Evidence for the existence of a robust pattern of prey selection in food webs.}},
-volume = {274},
-year = {2007}
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
+
+
+@Other{Alonwebsite,
+  Title                    = {Uri Alon Lab: Design principles in biology},
+  Author                   = {Alon, Uri},
+  Publication              = {Weizmann Institute of Science},
+  Url                      = {http://www.weizmann.ac.il/mcb/UriAlon/},
+  Year                     = {2018}
 }
-@website{Alonwebsite,
-author={Alon, Uri},
-url={http://www.weizmann.ac.il/mcb/UriAlon/},
-year={2018},
-title={Uri Alon Lab: Design principles in biology},
-publication={Weizmann Institute of Science}
+
+@Article{BramonMora364703,
+  Title                    = {pymfinder: a tool for the motif analysis of binary and quantitative complex networks},
+  Author                   = {Bramon Mora, Bernat and Cirtwill, Alyssa R and Stouffer, Daniel B},
+  Journal                  = {bioRxiv},
+  Year                     = {2018},
+
+  Abstract                 = {We developed pymfinder, a new software to analyze multiple aspects of the so-called network motifs---distinct n-node patterns of interaction---for any directed, undirected, unipartite or bipartite network. Unlike existing software for the study of network motifs, pymfinder allows the computation of node- and link-specific motif profiles as well as the analysis of weighted motifs. Beyond the overall characterization of networks, the tools presented in this work therefore allow for the comparison of the "roles" of either nodes or links of a network. Examples include the study of the roles of different species and/or their trophic/mutualistic interactions in ecological networks or the roles of specific proteins and/or their activation/inhibition relationships in protein-protein interaction networks. Here, we show how to apply the main tools from pymfinder using a predator-prey interaction network from a marine food web. pymfinder is open source software that can be freely and anonymously downloaded from https://github.com/stoufferlab/pymfinder, distributed under the MIT License (2018).},
+  Doi                      = {10.1101/364703},
+  Eprint                   = {https://www.biorxiv.org/content/early/2018/07/07/364703.full.pdf},
+  Owner                    = {bernat},
+  Publisher                = {Cold Spring Harbor Laboratory},
+  Timestamp                = {2018.07.09},
+  Url                      = {https://www.biorxiv.org/content/early/2018/07/07/364703}
 }
+
+@Article{Stouffer2007,
+  Title                    = {{Evidence for the existence of a robust pattern of prey selection in food webs.}},
+  Author                   = {Stouffer, Daniel B and Camacho, Juan and Jiang, Wenxin and Amaral, Lu\'{\i}s A. Nunes},
+  Journal                  = {Proceedings of the Royal Society B: Biological Sciences},
+  Year                     = {2007},
+
+  Month                    = aug,
+  Number                   = {1621},
+  Pages                    = {1931--1940},
+  Volume                   = {274},
+
+  Doi                      = {10.1098/rspb.2007.0571},
+  File                     = {:home/arc136/Desktop/Papers/Stouffer et al. - 2007 - Proceedings of the Royal Society of London B.pdf:pdf},
+  Keywords                 = {Animals,Biological,Ecosystem,Food Chain,Models,Predatory Behavior},
+  Pmid                     = {17567558}
+}
+
