--- a/documentation/pymfinder_manual.tex
+++ b/documentation/pymfinder_manual.tex
@@ -95,7 +95,7 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 \section{How to use \emph{pymfinder}}
 	\subsection{Download and installation}
 		\subsubsection{Download}
-			\emph{pymfinder} can be downloaded from \url{https://github.com/stoufferlab/pymfinder}. Please make sure you cite \textit{software article} if you decide to use \emph{pymfinder}.
+			\emph{pymfinder} can be downloaded from \url{https://github.com/stoufferlab/pymfinder}. Please make sure you cite Bramon Mora et.\ al.\ \citep{BramonMora364703} if you decide to use \emph{pymfinder}.
 		\subsubsection{Installation}
 			Installation within a command-line terminal should be straightforward using the function `setup.py' included in the \emph{pymfinder} package. After navigating to the directory containing the package, run:
 
